# climate-viewer-ai-bot

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  init.sql  main.py  pyproject.toml  rag-diagrams-thesis.excalidraw  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py  routes.py
app/frontend/: __init__.py  routes.py
app/models/: __init__.py  ai.py  geoserver.py
app/services/: ai_service.py  geoserver_service.py
backend/: .env.example  TEST_README.md  main.py  pytest.ini  run_tests.py  test_climate_agent.py  test_main.py
backend/ai/: climate_agent.py  context_manager.py  rag_query_system.py
backend/models/: __init__.py  chat.py  document_chunk.py
backend/notebooks/: chunks.json  grobid_processor.py  lit_mining_v1.ipynb  lit_mining_v2.ipynb  lit_mining_v3.ipynb  openai_direct_testing.ipynb  rag.ipynb  rag_query_system.py  rag_testing.ipynb
backend/service/: ai_service.py  map_service.py  open_ai_service.py
data/: documentation.json
diagrams/: Rag-Response-to-User-Response-2026-03-06.mmd  Research-Paper-Text-2026-03-06-213426.mmd  Text-Embedding-Pipeline-2026-03-06-213407.mmd  User-Query-to-LLM-2026-03-06-213302.mmd
frontend/: .env.example  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  script.js  styles.css  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  app.js  chatManager.js  eventManager.js  index.css  main.tsx  mapManager.js
frontend/src/components/: MapComponent.tsx
frontend/src/components/chat/: Chat.tsx
frontend/src/components/map/: BaseMapSelector.tsx  DataLayerSelector.tsx  LayerController.tsx  MapComponent.tsx  MapContainer.tsx
frontend/src/config/: basemaps.ts  index.ts  providers.ts  types.ts  wmslayers.ts
static/: index.html  script.js  styles.css
