[project]
name = "climate-viewer-ai-bot-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.91.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "types-requests>=2.32.4.20250611",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["fronted*", "*.tests*", "tests*"]
